# interval_trading

./: .cursorrules  .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml  区间交易系统架构文档.md  阶段性修复.md  项目描述.md  项目描述2.0.md
data/: .gitkeep
docs/: manual_validation_report.md  range_analysis_report.md
interval_trading/: README.md  download_data.py  optimized_download.py  pyproject.toml  quick_download.py  simple_download.py  test_attraction_performance.py  test_full.py  test_simple.py
interval_trading/data/: symbols.json
interval_trading/src/: atr_calculator.py  attraction_score.py  bayesian_optimizer.py  data_acquisition.py  extended_levels.py  key_levels.py  kline_fetcher.py  log_transformer.py  peak_valley.py  trading_simulator.py
interval_trading/tests/: test_atr_calculator.py  test_attraction_score.py  test_data_acquisition.py  test_key_levels.py  test_kline_fetcher.py
scripts/analysis/: analyze_log_impact.py  analyze_ranges.py  calculate_ranges_dynamic.py
scripts/utilities/: batch_process_modules.py
src/: atr_calculator.py  data_acquisition.py  extended_levels.py  key_levels.py
